style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: "Roboto", sans-serif;
  background-color: black;
}

header {
  display: flex;
  flex-direction: column;
  min-height: 30vh;
  justify-content: center;
  align-items: center;
}
header h2 {
  padding: 2rem;
  color: white;
}
.search-form {
  padding: 2rem;
  display: flex;
}
.search-form input {
  font-size: 2rem;
  padding: 0.5rem;
  width: 100%;
  border: none;
  border: 2px solid rgb(94, 94, 94);
  outline: none;
}
.search-form button,
.more {
  border: none;
  padding: 0.5rem;
  font-size: 1rem;
  background: rgb(94, 94, 94);
  color: white;
  cursor: pointer;
  outline: none;
}
.search-form button:active,
.more:active {
  border-style: none;
}
.search-form button:hover,
.more:hover {
  background: rgb(49, 49, 49);
}
.more {
  padding: 1rem 3rem;
  font-size: 1.2rem;
}

.gallery-info {
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: gray;
  padding: 0.5rem 0rem;
}
.gallery-info a {
  color: gray;
}

.gallery {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
  padding: 2rem 0rem;
  width: 80%;
  margin: auto;
  row-gap: 3rem;
  column-gap: 3rem;
}

@media (max-width: 500px) {
  .gallery {
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  }
}

.img-container {
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}
.img-container img {
  display: block;
  height: 627px;
  min-width: 100%;
  object-fit: cover;
}

.nav-button {
  min-height: 30vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

